# ai-genai-autocorrection-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
config/: ideal_responses.json  logging.yaml  settings.yaml
src/autocorrection_pipeline/: __init__.py  main.py
src/autocorrection_pipeline/comparison/: __init__.py  base.py  cosine_similarity.py  llm_judge.py
src/autocorrection_pipeline/config/: __init__.py  settings.py
src/autocorrection_pipeline/correction/: __init__.py  capture.py
src/autocorrection_pipeline/logging_config/: __init__.py  setup.py
src/autocorrection_pipeline/pipeline/: __init__.py  orchestrator.py
src/autocorrection_pipeline/providers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  factory.py  openai_provider.py
src/autocorrection_pipeline/utils/: __init__.py  validators.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_pipeline_integration.py
tests/unit/: __init__.py  test_anthropic_provider.py  test_azure_openai_provider.py  test_capture.py  test_cosine_similarity.py  test_factory.py  test_llm_judge.py  test_openai_provider.py  test_orchestrator.py  test_settings.py  test_validators.py
